// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amoritize { quantity: 100, unit: 'USD' } over '2020-01-01/2020-01-04' 'days' 1`] = `
[
  {
    "date": "2020-01-01",
    "amount": {"quantity": 33.33, "unit": "USD"},
    "memo": "For Jan 1, 2020 - Jan 2, 2020 (1 day). Period 1/3 33.3%"
  },
  {
    "date": "2020-01-02",
    "amount": {"quantity": 33.33, "unit": "USD"},
    "memo": "For Jan 2, 2020 - Jan 3, 2020 (1 day). Period 2/3 66.7%"
  },
  {
    "date": "2020-01-03",
    "amount": {"quantity": 33.339999999999996, "unit": "USD"},
    "memo": "For Jan 3, 2020 - Jan 4, 2020 (1 day). Period 3/3 100%"
  }
]
`;

exports[`amoritize { quantity: 100, unit: 'USD' } over '2020-01-01/2020-03-01' 'months' 1`] = `
[
  {
    "date": "2020-01-01",
    "amount": {"quantity": 50, "unit": "USD"},
    "memo": "For Jan 1, 2020 - Feb 1, 2020 (1 month). Period 1/2 50%"
  },
  {
    "date": "2020-02-01",
    "amount": {"quantity": 50, "unit": "USD"},
    "memo": "For Feb 1, 2020 - Mar 1, 2020 (1 month). Period 2/2 100%"
  }
]
`;

exports[`amoritize { quantity: 100, unit: 'USD' } over '2020-01-01/2020-03-01' 'quarters' 1`] = `
[
  {
    "date": "2020-01-01",
    "amount": {"quantity": 100, "unit": "USD"},
    "memo": "For Jan 1, 2020 - Mar 1, 2020 (0.66 quarter). Period 1/1 100%"
  }
]
`;

exports[`amoritize { quantity: 100, unit: 'USD' } over '2020-01-01/2020-03-01' 'weeks' 1`] = `
[
  {
    "date": "2020-01-01",
    "amount": {"quantity": 8.33, "unit": "USD"},
    "memo": "For Jan 1, 2020 - Jan 6, 2020 (0.71 week). Period 1/9 8.3%"
  },
  {
    "date": "2020-01-06",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Jan 6, 2020 - Jan 13, 2020 (1 week). Period 2/9 20%"
  },
  {
    "date": "2020-01-13",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Jan 13, 2020 - Jan 20, 2020 (1 week). Period 3/9 31.7%"
  },
  {
    "date": "2020-01-20",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Jan 20, 2020 - Jan 27, 2020 (1 week). Period 4/9 43.3%"
  },
  {
    "date": "2020-01-27",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Jan 27, 2020 - Feb 3, 2020 (1 week). Period 5/9 55%"
  },
  {
    "date": "2020-02-03",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Feb 3, 2020 - Feb 10, 2020 (1 week). Period 6/9 66.7%"
  },
  {
    "date": "2020-02-10",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Feb 10, 2020 - Feb 17, 2020 (1 week). Period 7/9 78.3%"
  },
  {
    "date": "2020-02-17",
    "amount": {"quantity": 11.67, "unit": "USD"},
    "memo": "For Feb 17, 2020 - Feb 24, 2020 (1 week). Period 8/9 90%"
  },
  {
    "date": "2020-02-24",
    "amount": {"quantity": 9.98, "unit": "USD"},
    "memo": "For Feb 24, 2020 - Mar 1, 2020 (0.86 week). Period 9/9 100%"
  }
]
`;

exports[`amoritize { quantity: 100, unit: 'USD' } over '2020-01-01/2020-03-01' 'years' 1`] = `
[
  {
    "date": "2020-01-01",
    "amount": {"quantity": 100, "unit": "USD"},
    "memo": "For Jan 1, 2020 - Mar 1, 2020 (0.16 year). Period 1/1 100%"
  }
]
`;

exports[`subdivide interval '2020-01-01/2020-01-05' 'days' 1`] = `
[
  {"interval": "2020-01-01/2020-01-02", "duration": {"days": 1}, "ratio": 0.25},
  {"interval": "2020-01-02/2020-01-03", "duration": {"days": 1}, "ratio": 0.25},
  {"interval": "2020-01-03/2020-01-04", "duration": {"days": 1}, "ratio": 0.25},
  {"interval": "2020-01-04/2020-01-05", "duration": {"days": 1}, "ratio": 0.25}
]
`;

exports[`subdivide interval '2020-01-01/2020-03-01' 'months' 1`] = `
[
  {
    "interval": "2020-01-01/2020-02-01",
    "duration": {"months": 1},
    "ratio": 0.5
  },
  {"interval": "2020-02-01/2020-03-01", "duration": {"months": 1}, "ratio": 0.5}
]
`;

exports[`subdivide interval '2020-01-01/2020-03-01' 'quarters' 1`] = `
[
  {
    "interval": "2020-01-01/2020-03-01",
    "duration": {"quarters": 0.6593406593406593},
    "ratio": 1
  }
]
`;

exports[`subdivide interval '2020-01-01/2020-03-01' 'weeks' 1`] = `
[
  {
    "interval": "2020-01-01/2020-01-06",
    "duration": {"weeks": 0.7142857142857143},
    "ratio": 0.08333333333333334
  },
  {
    "interval": "2020-01-06/2020-01-13",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-01-13/2020-01-20",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-01-20/2020-01-27",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-01-27/2020-02-03",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-02-03/2020-02-10",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-02-10/2020-02-17",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-02-17/2020-02-24",
    "duration": {"weeks": 1},
    "ratio": 0.11666666666666667
  },
  {
    "interval": "2020-02-24/2020-03-01",
    "duration": {"weeks": 0.8571428571428571},
    "ratio": 0.09999999999999999
  }
]
`;

exports[`subdivide interval '2020-01-01/2020-03-01' 'years' 1`] = `
[
  {
    "interval": "2020-01-01/2020-03-01",
    "duration": {"years": 0.16393442622950818},
    "ratio": 1
  }
]
`;
